# count-bot

./: .editorconfig  .example.env  .gitignore  README.md  count.py  package.json  pyproject.toml  pyrightconfig.json
assets/: README.md
count/: __main__.py  bot.py  common.py  errors.py
count/assets/: README.md  config.ini
count/bot_state/: __init__.py  cog.py  config.py
count/config/: __init__.py  cog.py  config.py
count/core/: __init__.py  cog.py
count/countdown/: __init__.py  assets.py  audio.py  audio_creator.py  cog_creation.py  countdown.py  dynamic_cog.py  management_cog.py
count/play/: __init__.py  assets.py  audio.py  audio_creator.py  cog.py  config.py  dynamic_cog.py  management_cog.py  play.py
custom_audio/: .gitignore
