[tool.poetry]
authors = [ "SeparateRecords <me@rob.ac>" ]
description = "Discord bot for keeping people in sync by counting you in."
license = "ISC"
name = "count"
readme = "README.md"
version = "1.1.0"

[tool.poetry.dependencies]
python = "^3.6"
"discord.py" = { version = "^1.3.4", extras = [ "voice" ] }
python-dotenv = "^0.14.0"
click = "^7.1.2"
black = "^19.10b0"
first = "^2.0.2"

[tool.poetry.scripts]
bot = "count:cli"

[build-system]
requires = [ "poetry>=0.12" ]
build-backend = "poetry.masonry.api"
